media/styles.css
:root {
  --sv-input-padding: 5px;
  --sv-input-height: 25px;
  --sv-default-margin: 5px;
  --sv-scroll-width: 10px;
  --sv-default-border: 1px solid var(--vscode-checkbox-border);
  --sv-focus-color: var(--vscode-focusBorder);
  --sv-focus-border: 1px solid var(--vscode-focusBorder);
  --sv-error-foreground: var(--vscode-errorForeground);
  --sv-background-color: var(--vscode-editor-background);
  --sv-disabled-background-color: var(--vscode-list-inactiveFocusBackground);
  --sv-disabled-foreground-color: var(--vscode-input-placeholderForeground);
  --sv-button-foreground-color: var(--vscode-button-foreground);
  --sv-button-background-color: var(--vscode-button-background);
  --sv-button-hover-background-color: var(--vscode-button-hoverBackground);
  --sv-input-foreground-color: var(--vscode-input-foreground);
  --sv-input-background-color: var(--vscode-input-background);
  --sv-font-family: var(--vscode-font-family);
}

/* main */
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

/* disable up/down for number inputs */
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

#viewer {
  height: 100%;
}

.viewer-grid {
  height: 100%;
  display: grid;
  grid-template-columns: 250px var(--sv-scroll-width) auto;
  grid-template-areas: "options separator content";
}

.viewer-separator {
  grid-area: separator;
  border-right: var(--sv-default-border);
  border-left: var(--sv-default-border);
}

.viewer-options {
  grid-area: options;
  height: 100%;
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  margin-right: calc(-1 * var(--sv-scroll-width));
}

.viewer-options-section {
  margin: var(--sv-default-margin);
}

.viewer-options-section-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.viewer-options-section-field {
  display: flex;
  flex-direction: column;
  margin-bottom: var(--sv-default-margin);
}

.viewer-options-section-field-label {
  margin-bottom: var(--sv-default-margin);
}

.viewer-content {
  grid-area: content;
  display: grid;
}

.viewer-content-canvas {
  box-sizing: border-box;
  grid-column: 1;
  grid-row: 1;
  position: absolute;
}

.viewer-content-errors {
  grid-column: 1;
  grid-row: 1;
  z-index: 1;
  color: var(--sv-error-foreground);
  background-color: var(--sv-background-color);
  padding: 10px;
}

.component-button {
  min-height: var(--sv-input-height);
  margin: var(--sv-default-margin);
  display: flex;
  align-items: center;
}

.component-input-grid {
  display: grid;
  grid-gap: var(--sv-default-margin);
  grid-auto-flow: row;
}

.component-input-row {
  height: var(--sv-input-height);
  display: grid;
  grid-gap: var(--sv-input-padding);
  grid-auto-flow: column;
}

.component-input {
  margin-bottom: var(--sv-default-margin);
  min-width: 0px;
}

.component-input-error {
  color: var(--sv-error-foreground);
}

.component-input-readonly {
  background-color: var(--sv-disabled-background-color);
  color: var(--sv-disabled-foreground-color);
}

/* button */
button {
  border: none;
  text-align: center;
  border: var(--sv-default-border);
  color: var(--sv-button-foreground-color);
  background: var(--sv-button-background-color);
}

button:hover {
  cursor: pointer;
  background: var(--sv-button-hover-background-color);
}

button:focus {
  outline: none;
  border: var(--sv-focus-border);
}

/* input */
input {
  box-sizing: border-box;
  width: 100%;
  height: var(--sv-input-height);
  border: var(--sv-default-border);
  font-family: var(--sv-font-family);
  color: var(--sv-input-foreground-color);
  background-color: var(--sv-input-background-color);
}

input:focus {
  outline-color: var(--sv-focus-color) !important;
}

/* dropdown */
.dropdown-container {
  margin-bottom: var(--sv-default-margin);
  position: relative;
}

.dropdown-select {
  display: flex;
  flex-grow: 1;
  align-items: center;
  justify-content: space-between;
  border: var(--sv-default-border);
  color: var(--sv-input-foreground-color);
  background-color: var(--sv-input-background-color);
  padding: var(--sv-input-padding);
}

.dropdown-select:hover {
  background-color: var(--sv-input-background-color);
}

.dropdown-select-open,
.dropdown-select:focus {
  border: var(--sv-focus-border) !important;
}

.dropdown-main {
  display: flex;
  flex-grow: 1;
  height: var(--sv-input-height);
}

.dropdown-list {
  width: calc(100% - 2px);
  max-height: 125px;
  position: absolute;
  background-color: var(--sv-input-background-color);
  border: var(--sv-focus-border);
  z-index: 1;
}

.dropdown-list:focus {
  outline: none;
}

.dropdown-list-item {
  height: var(--sv-input-height);
  display: flex;
}

.dropdown-list-item-text {
  padding: var(--sv-input-padding);
  user-select: none;
}

.dropdown-list-item-selected {
  color: var(--sv-focus-color);
}

.dropdown-list-item-highlighted {
  background: var(--sv-focus-color);
  color: var(--sv-input-foreground-color);
}

